/ fixed left aligned project filter buttons on sm devices

--- a/src/app/pages/news/news.component.scss
+++ b/src/app/pages/news/news.component.scss
@@ -183,6 +183,10 @@
 
     @media (max-width: 576px) {
       width: calc(100% - 16px);
+
+      &:not(.high) {
+        margin-left: 7px;
+      }
     }
 
     .project-inner {
